--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 dist: trusty
 sudo: required
 mono: none
-dotnet: 1.0.0-preview2-003121
+dotnet: 1.0.0-preview2-1-003177
 before_install:
   - chmod +x ./scripts/build.sh
   - chmod +x ./scripts/test.sh
