--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: csharp
+solution: WindsoulDataFile.sln
 dist: trusty
 sudo: required
 mono: none
-dotnet: 1.0.0-preview2-1-003177
+matrix:
+    include:
+        - dotnet: 1.0.4
+          env: DOTNETCORE=1
 before_install:
   - chmod +x ./scripts/build.sh
   - chmod +x ./scripts/test.sh
