--- a/src/WindsoulDataFile/WindsoulDataFile.csproj
+++ b/src/WindsoulDataFile/WindsoulDataFile.csproj
@@ -7,4 +7,8 @@
     <Company />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenCover" Version="4.6.519" />
+  </ItemGroup>
+
 </Project>
